# OpenROAD

./: .gitignore  BUILD.bazel  CMakeLists.txt  handoff.md
docs/agents/: phase4-divide-and-conquer.md  phase4-gto-output-diagnosis.md
docs/superpowers/plans/: 2026-05-06-mdm-phase4-refactor.md  2026-05-07-divide-and-conquer-baseline.md  2026-05-07-gto-output-diagnosis.md  2026-05-07-phase4-flattened-placement.md
docs/superpowers/specs/: 2026-05-06-mdm-phase4-refactor-design.md  2026-05-07-gto-output-diagnosis-design.md
include/ord/: OpenRoad.hh
src/: CMakeLists.txt  OpenRoad.cc
src/dpl/include/dpl/: Opendp.h
src/dpl/src/: Opendp.cpp  dbToOpendp.cpp
src/gpl/: CMakeLists.txt
src/gpl/include/gpl/: Replace.h
src/gpl/src/: hpwl.cpp  nesterovBase.cpp  nesterovBase.h  placerBase.cpp  placerBase.h  replace.cpp  replace.i  replace.tcl
src/gpl/src/gpu/: CMakeLists.txt  gpuBackend.cpp  hpwl.cpp
src/gpl/test/: CMakeLists.txt  hpwl_gpu_test.cc
src/mdm/: BUILD  CMakeLists.txt
src/mdm/include/mdm/: MakeMultiDieManager.h  MultiDieManager.h
src/mdm/src/: BilevelCoordinator.cpp  BilevelCoordinator.h  CellsLegalizer.cpp  CellsLegalizer.h  FastTerminalLegalizer.cpp  FastTerminalLegalizer.h  GlobalTierOptimizer.cpp  GlobalTierOptimizer.h  MakeMultiDieManager.cpp  MultiDieManager.cpp  MultiDieManager.i  MultiDieManager.tcl  SemiLegalizer.cpp  SemiLegalizer.h  SwitchInstHelper.cpp  TerminalLegalizer.cpp  TerminalLegalizer.h  TestCaseManager.cpp  TestCaseManager.h
src/mdm/test/: regression_check.sh  regression_phase4_case2.tcl  regression_phase4_case3.tcl  regression_phase4_case4.tcl  regression_phase4_self_case2.tcl  regression_phase4_self_case3.tcl  regression_phase4_self_case4.tcl  test_phase41_skeleton.tcl  test_phase4_smoke.tcl
src/mdm/test/diagnose/: analyze_displacement.py  dump_case2_post_gto.tcl  dump_case2_post_planar.tcl  dump_case3_post_gto.tcl  dump_case3_post_planar.tcl  dump_case4_post_gto.tcl  dump_case4_post_planar.tcl  run_diagnosis.sh
src/thm/: CMakeLists.txt  README.md
src/thm/core/: CMakeLists.txt
src/thm/core/include/thm_core/: SteadySolver.h  ThermalCore.h  TransientSolver.h
src/thm/core/src/: SteadySolver.cpp  ThermalCore.cpp  TransientSolver.cpp
src/thm/core/test/: test_steady.cpp
src/thm/include/thm/: MakeThermal.h  Thermal.h
src/thm/src/: MakeThermal.cpp  Thermal.cpp  thermal.i  thermal.tcl
src/utl/include/utl/: Logger.h
validation/hotspot/: .gitignore  cross_validate.py
